--- a/templates/base.html
+++ b/templates/base.html
@@ -36,12 +36,12 @@
           {% if request.user.is_authenticated %}
             {% if user_type.user_type_name == 'jobseeker' %}
            <li><a href="/">Home</a></li>
-           <li><a href="{% url 'Jobseeker:jobseeker_view_jobs' %}">Applied Jobs</a></li>
+           <li><a href="{% url 'Jobseeker:jobseeker_view_jobs' %}">Applied Jobs{% if notification %}<span class="btn-floating pulse new badge green darken-1"></span>{% endif %}</a></li>
         <li><a href="{% url 'Jobseeker:jobseeker_profile' %}">Profile{% if need_update %}<span class="btn-floating pulse new badge green darken-1 "></span>{% endif %}</a></li>
             {% elif user_type.user_type_name == 'employer' %}
            <li><a href="/">Home</a></li>
           <li><a href="{% url 'Employer:post_job_crud' operation='new' id=0 %}">Post Job</a></li>
-          <li><a href="{% url 'Employer:employer_view_jobs' %}">My Jobs</a></li>
+          <li><a href="{% url 'Employer:employer_view_jobs' %}">My Jobs{% if notification %}<span class="btn-floating pulse new badge green darken-1"></span>{% endif %}</a></li>
           <li><a href="{% url 'Employer:employer_profile' %}">Profile{% if need_update %}<span class="btn-floating pulse new badge green darken-1"></span>{% endif %}</a></li>
             {% endif %}
 
